# Awning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  awning.desktop
.github/workflows/: ccpp.yml
protocols/: awn-config.xml
src/: log.cpp  log.hpp  main.cpp
src/backends/: X11.cpp  X11.hpp  drm.cpp  drm.hpp  evdev.cpp  evdev.hpp  fbdev.cpp  fbdev.hpp  libinput.cpp  libinput.hpp  manager.cpp  manager.hpp
src/protocols/awm/: config.cpp  config_output.cpp
src/protocols/awn/: config.cpp  config.hpp  config_output.cpp  config_output.hpp
src/protocols/kde/: decoration.cpp  decoration.hpp
src/protocols/wl/: compositor.cpp  compositor.hpp  data_device.cpp  data_device.hpp  data_device_manager.cpp  data_device_manager.hpp  data_source.cpp  data_source.hpp  keyboard.cpp  keyboard.hpp  output.cpp  output.hpp  pointer.cpp  pointer.hpp  region.cpp  region.hpp  seat.cpp  seat.hpp  shell.cpp  shell.hpp  shell_surface.cpp  shell_surface.hpp  subcompositor.cpp  subcompositor.hpp  subsurface.cpp  subsurface.hpp  surface.cpp  surface.hpp
src/protocols/wlr/: layer_shell.cpp  layer_shell.hpp  layer_surface.cpp  layer_surface.hpp  output_manager.cpp  output_manager.hpp
src/protocols/xdg/: popup.cpp  popup.hpp  positioner.cpp  positioner.hpp  surface.cpp  surface.hpp  toplevel.cpp  toplevel.hpp  wm_base.cpp  wm_base.hpp
src/protocols/zwp/: dmabuf.cpp  dmabuf.hpp
src/protocols/zxdg/: decoration.cpp  decoration.hpp  output.cpp  output.hpp
src/renderers/: egl.cpp  egl.hpp  gles2.cpp  gles2.hpp  manager.cpp  manager.hpp  software.cpp  software.hpp
src/utils/: dbus.hpp  reverse.hpp  session.hpp  shm.hpp  sockets.hpp
src/wayland/: compositor.cpp  compositor.hpp  data_device_manager.cpp  data_device_manager.hpp  keyboard.cpp  keyboard.hpp  output.cpp  output.hpp  pointer.cpp  pointer.hpp  region.cpp  region.hpp  seat.cpp  seat.hpp  shell.cpp  shell.hpp  shell_surface.cpp  shell_surface.hpp  surface.cpp  surface.hpp
src/wm/: client.cpp  client.hpp  drawable.cpp  drawable.hpp  frame.hpp  functions.hpp  input.cpp  input.hpp  manager.cpp  manager.hpp  output.cpp  output.hpp  server.cpp  server.hpp  texture.hpp  window.cpp  window.hpp
src/wm/manager/: functions.hpp  manager.cpp  manager.hpp
src/wm/x/: server.cpp  server.hpp  wm.cpp  wm.hpp
src/xdg/: decoration.cpp  decoration.hpp  popup.cpp  popup.hpp  positioner.cpp  positioner.hpp  surface.cpp  surface.hpp  toplevel.cpp  toplevel.hpp  wm_base.cpp  wm_base.hpp
